--- a/modules/client-configuration/pages/contact-methods.adoc
+++ b/modules/client-configuration/pages/contact-methods.adoc
@@ -22,19 +22,22 @@ For general information about Salt clients, see <<salt.gs.guide.intro>>.
 == Default (the {productname} Daemon rhnsd)
 
 
-The {productname} daemon ([command]``rhnsd``) runs on client systems and periodically connects with {productname} to check for new updates and notifications.
-The daemon, which runs in the background, is started by [systemitem]``rhnsd.service``
-.
-By default, it will check every 4 hours for new actions, therefore it may take some time for your clients to begin updating after actions have been scheduled for them.
+The {productname} daemon ([command]``rhnsd``) runs on traditional client systems and periodically connects with {productname} to check for new updates and notifications.
+It is only still in use on {sle} 11 and {rhnminrelease6}{mdash}these are systems that are not based on systemd.
+On later systems, a systemd timer ([systemitem]``rhnsd.timer``) is used and controlled by the rhnsd.service.
 
-To check for updates, [systemitem]``rhnsd``
- runs the external [systemitem]``mgr_check``
- program located in [path]``/usr/sbin/``
-.
+The daemon is started by /etc/init.d/rhnsd, it does not use rhnsd.service. 
+
+The daemon, which runs in the background, is started by *rhnsd.service*.
+// FIXME: check it with the systemd.timer
+////
+By default, it will check every 4 hours for new actions, therefore it may take some time for your clients to begin updating after actions have been scheduled for them.
+////
+
+To check for updates, [systemitem]``rhnsd`` runs the external [systemitem]``mgr_check`` program located in [path]``/usr/sbin/``.
 This is a small application that establishes the network connection to {productname}.
 The SUSE Manager daemon does not listen on any network ports or talk to the network directly.
-All network activity is done via the [systemitem]``mgr_check``
- utility.
+All network activity is done via the [systemitem]``mgr_check`` utility.
 
 .Auto accepting (EULAs)
 [WARNING]
@@ -44,10 +47,8 @@ To review a package EULA, open the package detail page in the {webui}.
 ====
 
 
-This figure provides an overview of the default [systemitem]``rhnsd``
- process path.
-All items left of the [systemitem]``Python XMLRPC server``
- block represent processes running on a {productname} client.
+This figure provides an overview of the default [systemitem]``rhnsd`` process path.
+All items left of the [systemitem]``Python XMLRPC server`` block represent processes running on a {productname} client.
 
 .rhnsd Contact Method
 
@@ -66,8 +67,12 @@ The {productname} daemon can be configured by editing the file on the client:
 
 This is the configuration file the rhnsd initialization script uses.
 An important parameter for the daemon is its check-in frequency.
-The default interval time is four hours (240 minutes). If you modify the configuration file, you must as {rootuser}
-restart the daemon with [command]``systemctl rhnsd restart``.
+The default interval time is four hours (240 minutes).
+If you modify the configuration file, you must as {rootuser} restart the daemon with:
+
+----
+/etc/init.d/rhnsd restart
+----
 
 .Minimum Allowed Check-in Parameter
 [IMPORTANT]
@@ -77,10 +82,11 @@ The minimum allowed time interval is one hour (60 minutes). If you set the inte
 
 === Viewing rhnsd Daemon Status
 
+As the {ruser} you may view the status of rhnsd by typing the command:
+----
+/etc/init.d/rhnsd status
+----
 
-You can view the status of rhnsd by typing the command [command]``systemctl status
-     rhnsd`` as {rootuser}
-.
 
 [[bp.contact.methods.ssh.push]]
 == Push via SSH
@@ -408,6 +414,13 @@ For more information, see
 OSAD is an alternative contact method between {productname} and its clients.
 By default, {productname} uses [systemitem]``rhnsd``, which contacts the server every four hours to execute scheduled actions.
 OSAD allows registered client systems to execute scheduled actions immediately.
+
+.Keep [systemitem]``rhnsd`` Running
+[NOTE]
+====
+Use OSAD only in addition to [systemitem]``rhnsd``.
+If you disable [systemitem]``rhnsd`` your client will be shown as not checking in after 24 hours.
+====
 
 OSAD has several distinct components:
 
