--- a/modules/architecture/pages/rhnsd.adoc
+++ b/modules/architecture/pages/rhnsd.adoc
@@ -1,16 +1,17 @@
 [[arch.component.rhnsd]]
 = rhnsd
 
-
-
+*rhnsd* is a client-side daemon for traditional clients only.
+As of {productname} 4, it is only available on non-systemd systems ({sle} 11 and {rhnminrelease6}).
+For later versions, a systemd timer ([systemitem]``rhnsd.timer``) is available.
 
 
 
 == Functions
 *rhnsd* is a primary component of {productname}. It performs the following functions in the stack.
 
-* **Client-side daemon for legacy clients**
-* **Periodically calls mgr_check(symlinked to rhn_check)**
+* **Client-side daemon for traditional clients**
+* **Periodically calls mgr_check (symlinked to rhn_check)**
 * **Randomizes check time not to overload the server**
 
 
