--- a/modules/ROOT/pages/release-notes-version-4.0.adoc
+++ b/modules/ROOT/pages/release-notes-version-4.0.adoc
@@ -57,7 +57,7 @@ xref-converter.rb - (Affects PDF Documents)::
 Our custom Asciidoctor xref extension converter requires minor refactoring as several links are incorrectly transforming during our PDF conversion. The cross reference styling will seem a little strange in our PDFs until we make the change.
 
 search - (Affects the Product WebUI)::
-The Algolia search field has been removed from the {productname} documentation WebUI. Use the **Help -> Search** page in the WebUI to look for topics. Search will be integrated into the documentation WebUI in an update. Search is also available on link:https:/www.suse.com/documentation/suse-manager-4/[].
+The Algolia search field has been disabled in the {productname} documentation WebUI. Use the **Help -> Search** page in the WebUI to look for topics. Search will be integrated into the documentation WebUI in an update. Search is available on link:https:/www.suse.com/documentation/suse-manager-4/[].
 +
 [NOTE]
 ====
@@ -158,7 +158,7 @@ In this release, we have reorganized our documentation and updated our tooling t
 
 Please keep the feedback coming!
 In this new layout, you can propose changes directly by clicking the btn:[Edit this Page] button.
-You can also report an issue by clicking [guimenu]``Report Issue`` in the [guimenu]``Resources`` menu.  
+You can also report an issue by clicking [guimenu]``Report Issue`` in the [guimenu]``Resources`` menu.
 
 
 [WARNING]
