Moved content around.

--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -19,7 +19,10 @@ ifndef::backend-pdf[]
 // Virtualization
 ** xref:virtualization.adoc[Virtualization]
 ** xref:public-cloud.adoc[Public Cloud]
+// VHMs
 ** xref:virtual-hosts.adoc[Virtual Hosts]
+*** xref:vhm-vmware.adoc[VMWare Virtual Hosts]
+*** xref:vhm-file.adoc[File-based Virtual Hosts]
 // ISS
 ** xref:iss.adoc[Inter-Server Synchronization]
 ** Security
@@ -85,12 +88,16 @@ include::modules/administration/pages/prometheus.adoc[leveloffset=+1]
 include::modules/administration/pages/kubernetes.adoc[leveloffset=+1]
 
 // Virtualization
-// This chapter only applies to traditional clients. Should either be deleted or moved to client cfg. LKB 2019-03-21
 include::modules/administration/pages/virtualization.adoc[leveloffset=+1]
 
 include::modules/administration/pages/public-cloud.adoc[leveloffset=+1]
 
+// VHMs
 include::modules/administration/pages/virtual-hosts.adoc[leveloffset=+1]
+
+include::modules/administration/pages/vhm-vmware.adoc[leveloffset=+2]
+
+include::modules/administration/pages/vhm-file.adoc[leveloffset=+2]
 
 // ISS
 include::modules/administration/pages/iss.adoc[leveloffset=+1]
