--- a/modules/client-configuration/pages/contact-methods.adoc
+++ b/modules/client-configuration/pages/contact-methods.adoc
@@ -139,7 +139,7 @@ ssh_push_use_hostname = true
 
 It is also possible to adjust the number of threads to use for opening client connections in parallel.
 By default two parallel threads are used.
-Set [systemitem]``taskomatic.ssh_push_workers`` in [path]``/etc/rhn/rhn.conf`` like this:
+Set [systemitem]``taskomatic.ssh_push_workers`` in [path]``/etc/rhn/rhn.conf``:
 
 ----
 taskomatic.ssh_push_workers = number
