--- a/modules/administration/pages/vhm-file.adoc
+++ b/modules/administration/pages/vhm-file.adoc
@@ -12,7 +12,7 @@ image::systems_virtual_host_managers_file.png[scaledwidth=80%]
 .VMWare vCenter Installations without Direct Access
 [NOTE]
 ====
-The file-based is not meant to be used with manually crafted files.
+The file-based option is not meant to be used with manually crafted files.
 It only meant to be used with the output of [command]``virtual-host-gatherer`` against some other module.
 File-based is suitable for VMWare vCenter installations for which no direct API access is possible from the {susemgr}.
 
