--- a/modules/administration/pages/vhm-file.adoc
+++ b/modules/administration/pages/vhm-file.adoc
@@ -13,7 +13,7 @@ image::systems_virtual_host_managers_file.png[scaledwidth=80%]
 [NOTE]
 ====
 The file-based option is not meant to be used with manually crafted files.
-It only meant to be used with the output of [command]``virtual-host-gatherer`` against some other module.
+It is only meant to be used with the output of [command]``virtual-host-gatherer`` against some other module.
 File-based is suitable for VMWare vCenter installations for which no direct API access is possible from the {susemgr}.
 
 The solution is to run [command]``virtual-host-gatherer`` from somewhere else in the network and save the produced JSON data for further processing.
