--- a/modules/administration/pages/vhm-file.adoc
+++ b/modules/administration/pages/vhm-file.adoc
@@ -76,7 +76,7 @@ man virtual-host-gatherer
 ----
 
 
-The `README` file provided with the package provides background information about the `type` of a hypervisor, etc.:
+The `README` file of that package provides background information about the `type` of a hypervisor, etc.:
 
 ----
 /usr/share/doc/packages/virtual-host-gatherer/README.md
