--- a/modules/administration/pages/vhm-file.adoc
+++ b/modules/administration/pages/vhm-file.adoc
@@ -82,4 +82,4 @@ The `README` file of that package provides background information about the `typ
 /usr/share/doc/packages/virtual-host-gatherer/README.md
 ----
 
-The man page and the `README` file also contain example configuration files for your reference.
+The man page and the `README` file also contain example configuration files.
