--- a/modules/administration/pages/vhm-vmware.adoc
+++ b/modules/administration/pages/vhm-vmware.adoc
@@ -88,7 +88,7 @@ Assign a username
 
 [IMPORTANT]
 ====
-Remember that only objects and resources which match a user's defined role will be inventoried.
+Only objects and resources that match a user's defined role will be inventoried.
 Set the user's role on objects and resources you want inventoried to _read-only_.
 ====
 +
