cont. with rhnsd (back-port)

--- a/adoc/bp_chap_troubleshooting.adoc
+++ b/adoc/bp_chap_troubleshooting.adoc
@@ -81,18 +81,18 @@ The cloned virtual machine should have a different UUID from the original (this 
 +
 
 . Change the Hostname and IP addresses, also make sure /etc/hosts contains the changes you made and the correct host entries.
-. Stop rhnsd daemon with:
+. Stop the rhnsd daemon, on {rhnminrelease6} and {sle} 11 with:
 +
 
 ----
 # /etc/init.d/rhnsd stop
 ----
 +
-or alternativly:
+or, on newer systemd-based systems, with:
 +
 
 ----
-# rcrhnsd stop
+# service rhnsd stop
 ----
 . Stop osad with:
 +
