--- a/modules/administration/pages/tshoot-registerclones.adoc
+++ b/modules/administration/pages/tshoot-registerclones.adoc
@@ -40,7 +40,7 @@ The cloned virtual machine should have a different UUID from the original (the U
 # dbus-uuidgen --ensure
 # systemd-machine-id-setup
 ----
-ones
+
 . For {slsa}{nbsp}11: As there is no systemd machine ID, generate one from dbus:
 +
 ----
@@ -64,7 +64,7 @@ Each minion will now have a different [path]``/etc/machine-id`` and should now b
 .Procedure: Resolving Duplicate Machine IDs in Cloned Traditional Clients
 
 . On the cloned machine, change the hostname and IP addresses, and make sure [path]``/etc/hosts`` contains the changes you made and the correct host entries.
-. Stop rhnsd daemon, on {rhnminrelease6} and {sle} 11 with:
+. Stop the rhnsd daemon, on {rhnminrelease6} and {sle} 11 with:
 +
 ----
 # /etc/init.d/rhnsd stop
