--- a/adoc/advanced_topics_virtualization.adoc
+++ b/adoc/advanced_topics_virtualization.adoc
@@ -388,38 +388,28 @@ If the {vmhost} is registered as a Salt minion, a final configuration step is ne
 ==== {vmhost} setup on Traditional clients
 
 
-Once the registration process is finished and all packages have been installed, enable the [daemon]``osad``
-(Open Source Architecture Daemon). On a {sls}
-system this can be achieved by running the following commands as user {rootuser}
-:
+When the registration process is finished and all packages have been installed, enable the [daemon]``osad`` (Open Source Architecture Daemon).
+On {sls} 12 systems and later, it can be achieved by running the following commands as user {rootuser}:
 
 
 ----
-systemctl stop rhnsd
-systemctl disable rhnsd
+service rhnsd stop
+service rhnsd disable
 ----
 
 
 ----
-systemctl enable osad
-systemctl start osad
+service osad enable
+service osad start
 ----
 
-.[daemon]``osad``Together with [daemon]``rhnsd``
-IMPORTANT: The [daemon]``rhnsd``
- daemon checks for scheduled actions every four hours, so it can take up to four hours before a scheduled action is carried out.
-If many clients are registered with {productname}
-, this long interval ensures a certain level of load balancing since not all clients act on a scheduled action at the same time.
+.[systemitem]``osad``Together with [systemitem]``rhnsd``
+IMPORTANT: [systemitem]``rhnsd`` daemon checks for scheduled actions every four hours, so it can take up to four hours before a scheduled action is carried out.
+If many clients are registered with {productname}, this long interval ensures a certain level of load balancing since not all clients act on a scheduled action at the same time.
 
-However, when managing {vmguest}
-s, you usually want actions like rebooting a {vmguest}
-to be carried out immediately. Adding [daemon]``osad``
- ensures that.
-The [daemon]``osad``
- daemon receives commands over the jabber protocol from {productname}
- and commands are instantly executed.
-Alternatively you may schedule actions to be carried out at a fixed time in the future (whereas with [daemon]``rhnsd``
- you can only schedule for a time in the future plus up to four hours).
+However, when managing {vmguest}s, you usually want actions like rebooting a {vmguest} to be carried out immediately, which can be done by adding [systemitem]``osad``.
+The [systemitem]``osad`` daemon receives commands over the jabber protocol from {productname} and commands are instantly executed.
+Alternatively you may schedule actions to be carried out at a fixed time in the future (whereas with [systemitem]``rhnsd`` you can only schedule for a time in the future plus up to four hours).
 
 
 
@@ -431,20 +421,14 @@ Once all requirements on the {productname}
 and the {vmhost}
 are met, you can start to autoinstall {vmguest}
 s on the host.
-Note that {vmguest}
-s will not be automatically registered with {productname}
-, therefore we strongly recommend to modify the autoinstallation profile as described in <<sec.virtualzation.autoinstall.req-mgr.profile.scripts>>. {vmguest}
-s need to be registered to manage them with {productname}
-.
-Proceed as follows to autoinstall a {vmguest}
-;.
+Note that {vmguest}s will not be automatically registered with {productname}, therefore we strongly recommend to modify the autoinstallation profile as described in <<sec.virtualzation.autoinstall.req-mgr.profile.scripts>>. {vmguest}s need to be registered to manage them with {productname}.
+Proceed as follows to autoinstall a {vmguest}:
 
 .No parallel Autoinstallations on {vmhost}
 [IMPORTANT]
 ====
 It is not possible to install more than one {vmguest}
-at a time on a single {vmhost}
-.
+at a time on a single {vmhost}.
 When scheduling more than one autoinstallation with {productname}
 make sure to choose a timing, that starts the next installation after the previous one has finished.
 If a guest installation starts while another one is still running, the running installation will be cancelled.
@@ -472,11 +456,8 @@ In case an installation has failed, you can menu:Reschedule[]
 You do not have to configure the installation again.
 
 If the event log does not contain enough information to locate a problem, log in to the {vmhost}
-console and read the log file [path]``/var/log/up2date``
-.
-If you are using the [daemon]``rhnsd``
-, you may alternatively immediately trigger any scheduled actions by calling [command]``rhn_ckeck`` on the {vmhost}
-.
+console and read the log file [path]``/var/log/up2date``.
+If you are using [systemitem]``rhnsd``, you may alternatively immediately trigger any scheduled actions by calling [command]``rhn_ckeck`` on the {vmhost}.
 Increase the command's verbosity by using the options [option]``-v``, [option]``-vv``, or [option]``-vvv``, respectively.
 ====
 
