--- a/modules/administration/pages/virtualization.adoc
+++ b/modules/administration/pages/virtualization.adoc
@@ -336,7 +336,7 @@ Salt 2019.2.0 or later is required on the virtual host in order for the salt-bas
 ==== {vmhost} setup on Traditional clients
 
 
-Once the registration process is finished and all packages have been installed, enable [daemon]``osad`` (open source architecture daemon).
+When the registration process is finished and all packages have been installed, enable [daemon]``osad`` (open source architecture daemon).
 On {sls} 12 systems and later, it can be achieved by running the following commands as user {rootuser}:
 
 
@@ -367,7 +367,7 @@ Alternatively you may schedule actions to be carried out at a fixed time in the 
 === Autoinstalling {vmguest}s
 
 
-Once all requirements on the {productname} and the {vmhost} are met, you can start to autoinstall {vmguest}s on the host.
+When all requirements on the {productname} and the {vmhost} are met, you can start to autoinstall {vmguest}s on the host.
 Note that {vmguest}s will not be automatically registered with {productname}, therefore we strongly recommend to modify the autoinstallation profile as described in <<sec.virtualzation.autoinstall.req-mgr.profile.scripts>>.
 {vmguest}s need to be registered to manage them with {productname}.
 Proceed as follows to autoinstall a {vmguest}.
@@ -397,7 +397,7 @@ If a guest installation starts while another one is still running, the running i
 To view the installation log, click menu:Events[History] on the [guimenu]``Session Status`` page.
 On the [guimenu]``System History Event`` page you can click a [guimenu]``Summary`` entry to view a detailed log.
 
-In case an installation has failed, you can btn:[Reschedule] it from this page once you have corrected the problem.
+In case an installation has failed, you can btn:[Reschedule] it from this page when you have corrected the problem.
 You do not have to configure the installation again.
 
 If the event log does not contain enough information to locate a problem, log in to the {vmhost} console and read the log file for your package manager.
