--- a/adoc/manager_reference_openscap.adoc
+++ b/adoc/manager_reference_openscap.adoc
@@ -1,4 +1,4 @@
-[[ch-openscap]]
+[ch-openscap]]
 = System Security via OpenSCAP
 
 include::entities.adoc[]
@@ -110,31 +110,19 @@ WARNING: The XCCDF content is validated before it is run on the remote system.
 Specifying invalid arguments can make spacewalk-oscap fail to validate or run.
 Due to security concerns the [command]``oscap xccdf eval`` command only accepts a limited set of parameters.
 +
-
-
-+
 Run the [command]``mgr_check`` command to ensure the action is being picked up by the client system.
 +
-
 ----
 mgr_check -vv
 ----
-+
-NOTE: If the {productname} daemon ([command]``rhnsd``) or [command]``osad`` are running on the client system, the action will be picked up by these services.
-To check if they are running, use:
 
+NOTE: If [command]``rhnsd`` or [command]``osad`` are running on the client system, the action will be picked up by these services.
+On systemd-based systems, you can check if they are running with:
++
 ----
 service rhnsd start
-----
-
-or
-
-----
 service osad start
 ----
-+
-
-
 
 To view the results of the scan, refer to <<s2-openscap-suma-audit-scans_view>>.
 
