rhnsd first part done

--- a/adoc/reference-webui-systems.adoc
+++ b/adoc/reference-webui-systems.adoc
@@ -240,7 +240,7 @@ The reason may be one of the following:
 
 * The system is not entitled to any {productname} service.
 System profiles that remain unentitled for 180 days (6 months) are removed.
-* The system is entitled, but the {productname} daemon ([systemitem]``rhnsd``) has been disabled on the system.
+* The system is entitled, but the {productname} daemon ([systemitem]``rhnsd``) has been disabled on the traditional client.
 Refer to
 ifndef::env-github,backend-html5[]
 <<bp.contact.methods.rhnsd>>
@@ -589,7 +589,6 @@ Select one of the following contact methods:
 Auto Patch Update:::
 If this box is checked, available patches are automatically applied to the system when it checks in (Pull) or immediately if you select either Push option.
 This action takes place without user intervention.
-The {productname} Daemon ([systemitem]``rhnsd``) must be enabled on the system for this feature to work.
 +
 
 .Conflicts With Third Party Packages
@@ -701,7 +700,7 @@ If you do, the autoinstallation will fail.
 This subtab provides information about the system, such as networking, BIOS, memory, and other devices.
 This only works if you included the hardware profile during registration.
 If the hardware profile looks incomplete or outdated, click the btn:[Schedule Hardware Refresh] button.
-The next time the {productname} Daemon ([systemitem]``rhnsd``) connects to {productname}, it will update your system profile with the latest hardware information.
+The next time the system connects to {productname}, it will update your system profile with the latest hardware information.
 
 
 
@@ -832,7 +831,7 @@ When new packages or updates are installed on the client via {productname}, any 
 Packages::
 The default display of the [guimenu]``Packages`` tab describes the options available and provides the means to update your package list.
 To update or complete a potentially outdated list, possibly because of the manual installation of packages, click the btn:[Update Package List] button in the bottom right-hand corner of this page.
-The next time the {productname} daemon ([systemitem]``rhnsd``) connects to {productname}, it updates your system profile with the latest list of installed packages.
+The next time the system connects to {productname}, it updates your system profile with the latest list of installed packages.
 
 List / Remove::
 Lists installed packages and enables you to remove them.
