--- a/adoc/reference-webui-patches.adoc
+++ b/adoc/reference-webui-patches.adoc
@@ -81,8 +81,8 @@ In addition, users with appropriate roles can apply patches using two other meth
 
 [IMPORTANT]
 ====
-If you use scheduled package installation, the packages or patches are installed via the {productname} daemon ([command]``rhnsd``). You must enable the {productname} daemon on your systems.
-For more information about the {productname} daemon, see <<bp.contact.methods.rhnsd>>.
+If you use scheduled package installation, the packages or patches are installed via the configured contact method.
+For more information, see <<bp.contact.methods.rhnsd>>.
 ====
 
 
