--- a/adoc/advanced_topics_virtualization.adoc
+++ b/adoc/advanced_topics_virtualization.adoc
@@ -407,6 +407,8 @@ service osad start
 IMPORTANT: [systemitem]``rhnsd`` daemon checks for scheduled actions every four hours, so it can take up to four hours before a scheduled action is carried out.
 If many clients are registered with {productname}, this long interval ensures a certain level of load balancing since not all clients act on a scheduled action at the same time.
 
+For setting the time interval, see <<[[bp.systems.management>>.
+
 However, when managing {vmguest}s, you usually want actions like rebooting a {vmguest} to be carried out immediately, which can be done by adding [systemitem]``osad``.
 The [systemitem]``osad`` daemon receives commands over the jabber protocol from {productname} and commands are instantly executed.
 Alternatively you may schedule actions to be carried out at a fixed time in the future (whereas with [systemitem]``rhnsd`` you can only schedule for a time in the future plus up to four hours).
@@ -417,10 +419,7 @@ Alternatively you may schedule actions to be carried out at a fixed time in the 
 === Autoinstalling {vmguest} s
 
 
-Once all requirements on the {productname}
-and the {vmhost}
-are met, you can start to autoinstall {vmguest}
-s on the host.
+When all requirements on the {productname} and the {vmhost} are met, you can start to autoinstall {vmguest}s on the host.
 Note that {vmguest}s will not be automatically registered with {productname}, therefore we strongly recommend to modify the autoinstallation profile as described in <<sec.virtualzation.autoinstall.req-mgr.profile.scripts>>. {vmguest}s need to be registered to manage them with {productname}.
 Proceed as follows to autoinstall a {vmguest}:
 
