--- a/modules/administration/pages/virtualization.adoc
+++ b/modules/administration/pages/virtualization.adoc
@@ -353,14 +353,14 @@ service osad start
 
 .Using [systemitem]``osad`` with [systemitem]``rhnsd``
 IMPORTANT: [systemitem]``rhnsd``  checks for scheduled actions every four hours, so it can take up to four hours before a scheduled action is carried out.
-If many clients are registered with {productname}, this long interval ensures a certain level of load balancing since not all clients act on a scheduled action at the same time.
+If many clients are registered with {productname}, this long interval ensures a certain level of load balancing because not all clients act on a scheduled action at the same time. 
+For setting the time interval, see xref:client-configuration:contact-methods.adoc[].
 
 However, when managing {vmguest}s, you usually want actions like rebooting a {vmguest} to be carried out immediately, which can be done by adding [systemitem]``osad``.
 The [systemitem]``osad`` daemon receives commands over the jabber protocol from {productname} and commands are instantly executed.
-// FIXME: check it with the systemd.timer
-////
 Alternatively you may schedule actions to be carried out at a fixed time in the future (whereas with [systemitem]``rhnsd`` you can only schedule for a time in the future plus up to four hours).
-////
+
+
 
 
 [[sec.virtualization.autoinstall.installation]]
