--- a/modules/salt/pages/salt-states.adoc
+++ b/modules/salt/pages/salt-states.adoc
@@ -55,7 +55,7 @@ However the state data placed here affects the Highstate of minions and is merge
 == {productname} States
 
 
-All sls files created by users will be saved to disk on the salt-master server.
+All user created SLS files will be saved to disk on the salt-master server.
 These files will be placed in [path]``/srv/susemanager/salt/``
  and each organization will be placed within its own directory.
 Although these states are custom, these states are created using {productname}
