--- a/modules/salt/pages/salt-states.adoc
+++ b/modules/salt/pages/salt-states.adoc
@@ -149,7 +149,7 @@ salt -I 'group_ids:GID' state.apply
 
 
 [[salt.pillars.setpackageendpoint]]
-== Use pillars to set the package download endpoint
+== Use Pillars to Set the Package Download Endpoint
 
 By default, {productname} assumes that the download endpoint to use is the FQDN of the {productname} server, or the {productname} Proxy.
 However, there are some cases where you might like to use a different FQDN as the download endpoint.
