--- a/modules/salt/pages/salt-states.adoc
+++ b/modules/salt/pages/salt-states.adoc
@@ -155,7 +155,7 @@ By default, {productname} assumes that the download endpoint to use is the FQDN 
 However, there are some cases where you might like to use a different FQDN as the download endpoint.
 The most common example is if you need to use load balancing, caching proxies, or in environments with complicated networking requirements.
 
-To change the package download endpoint, you can manually adjust three salt pillars:
+To change the package download endpoint, you can manually adjust three Salt pillars:
 * [systemitem]``pkg_download_point_protocol``, defaults to [systemitem]``https``.
 * [systemitem]``pkg_download_point_host``, defaults to the FQDN of the {productname} Server (or Proxy, if in use).
 * [systemitem]``pkg_download_point_port``, defaults to [systemitem]``443``.
