--- a/modules/salt/pages/salt-states.adoc
+++ b/modules/salt/pages/salt-states.adoc
@@ -60,7 +60,7 @@ These files will be placed in [path]``/srv/susemanager/salt/``
  and each organization will be placed within its own directory.
 Although these states are custom, these states are created using {productname}
 .
-The following provides an overview of directory structure:
+The following provides an overview of the directory structure:
 
 ----
 ├── manager_org_DEVEL
