--- a/modules/salt/pages/salt-states.adoc
+++ b/modules/salt/pages/salt-states.adoc
@@ -81,7 +81,7 @@ E.g.:
 == Pillar Data
 
 
-SUSE Manager exposes a small amount of internal data as Pillars which can be used with custom {sls} states.
+SUSE Manager exposes a small amount of internal data as Pillars which can be used with custom states.
 Data that is exposed includes group membership, organization membership, and file roots.
 These are managed either automatically by {productname}, or manually by the user.
 
