Set up structure

--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -18,11 +18,11 @@ ifndef::backend-pdf[]
 // We need to keep this, regardless as it is a functionality of the web interface. There is a note in the introduction.
 // Virtualization
 ** xref:virtualization.adoc[Virtualization]
+*** xref:virt-xenkvm.adoc[Virtualization with Xen and KVM]
+*** xref:virt-vmware.adoc[Virtualization with VMWare]
+*** xref:virt-file.adoc[Virtualization with Other Hosts]
+// Public Cloud
 ** xref:public-cloud.adoc[Public Cloud]
-// VHMs
-** xref:virtual-hosts.adoc[Virtual Hosts]
-*** xref:vhm-vmware.adoc[VMWare Virtual Hosts]
-*** xref:vhm-file.adoc[File-based Virtual Hosts]
 // ISS
 ** xref:iss.adoc[Inter-Server Synchronization]
 ** Security
@@ -90,14 +90,15 @@ include::modules/administration/pages/kubernetes.adoc[leveloffset=+1]
 // Virtualization
 include::modules/administration/pages/virtualization.adoc[leveloffset=+1]
 
+include::modules/administration/pages/virt-xenkvm.adoc[leveloffset=+2]
+
+include::modules/administration/pages/virt-vmware.adoc[leveloffset=+2]
+
+include::modules/administration/pages/virt-file.adoc[leveloffset=+2]
+
+// Public Cloud
+
 include::modules/administration/pages/public-cloud.adoc[leveloffset=+1]
-
-// VHMs
-include::modules/administration/pages/virtual-hosts.adoc[leveloffset=+1]
-
-include::modules/administration/pages/vhm-vmware.adoc[leveloffset=+2]
-
-include::modules/administration/pages/vhm-file.adoc[leveloffset=+2]
 
 // ISS
 include::modules/administration/pages/iss.adoc[leveloffset=+1]
