--- a/modules/administration/pages/virt-file.adoc
+++ b/modules/administration/pages/virt-file.adoc
@@ -1,5 +1,5 @@
-[[vhm-file]]
-= File-based Virtual Hosts
+[[virt-file]]
+= Virtualization with Other Third Party Providers
 
 In a VMWare environment where direct connection to the {susemgr} is not possible, a JSON file can be exported from the ESXi or vSphere host and later imported into {productname}.
 
