--- a/modules/administration/pages/virt-vmware.adoc
+++ b/modules/administration/pages/virt-vmware.adoc
@@ -1,3 +1,21 @@
+[[virt-vmware]]
+= Virtualization with VMWare
+
+Virtual Hosts are hypervisors provided by a third party.
+Virtual Host Managers (VHMs) can be used to manage one or more virtual hosts, and each virtual host can contain one or more virtual guests.
+
+In {productname}, VHMs can be based on VMWare, or created from a JSON file.
+
+
+
+After your VHM has been created and configured, Taskomatic will run data collection automatically.
+You can also begin data collection manually through the {webui}, by navigating to menu:Systems[Virtual Host Managers], selecting the appropriate VHM, and clicking btn:[Refresh Data].
+
+{productname} ships with a tool called [command]``virtual-host-gatherer`` that can connect to VHMs using their API, and request information about virtual hosts.
+[command]``virtual-host-gatherer`` maintains the concept of optional modules, where each module enables a specific VHM.
+This tool is automatically invoked nightly by Taskomatic.
+Log files for the [command]``virtual-host-gatherer`` tool are located at [path]``/var/log/rhn/gather.log``.
+
 [[vhm-vmware]]
 = VMWare-based Virtual Hosts
 
