initial content for intro

--- a/modules/administration/pages/virt-file.adoc
+++ b/modules/administration/pages/virt-file.adoc
@@ -1,6 +1,54 @@
 [[virt-file]]
 = Virtualization with Other Third Party Providers
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+////
+
+Old content below here
+
 In a VMWare environment where direct connection to the {susemgr} is not possible, a JSON file can be exported from the ESXi or vSphere host and later imported into {productname}.
 
 After selecting menu:Create[File-Based] enter a label and URL leading to the location of this file.
