--- a/modules/administration/pages/virt-vmware.adoc
+++ b/modules/administration/pages/virt-vmware.adoc
@@ -1,6 +1,54 @@
 [[virt-vmware]]
 = Virtualization with VMWare
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+////
+
+Old content below here
+
 Virtual Hosts are hypervisors provided by a third party.
 Virtual Host Managers (VHMs) can be used to manage one or more virtual hosts, and each virtual host can contain one or more virtual guests.
 
