--- a/modules/administration/pages/virt-xenkvm.adoc
+++ b/modules/administration/pages/virt-xenkvm.adoc
@@ -3,6 +3,52 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+////
+
+Old content below here
+
 The following documentation is valid in the context of traditional clients.
 Salt minions must be treated differently:
 
