--- a/modules/administration/pages/virtualization.adoc
+++ b/modules/administration/pages/virtualization.adoc
@@ -1,11 +1,12 @@
 [[virtualization]]
 = Virtualization
 
+{productname} supports virtualized client machines, but they are handled differently depending on which third-party virtualization provider you use.
 
+Xen and KVM virtualized clients can be managed directly in {productname}.
+This enables you to autoinstall virtual hosts and guests using {ay} or {kickstart}, and manage guests in the same way as you manage other clients.
 
+For VMWare virtualized clients, including vCenter/vSphere and ESXi, {productname} requires you to set up a virtual host manager, or VHM, to control the VMs.
 
-
-{productname} allows you to autoinstall and manage {xen} and {kvm} {vmguest}s on a registered {vmhost}.
-To autoinstall a {vmguest}, an autoinstallable distribution and an autoinstallation profile ({ay} or {kickstart}) need to exist on {productname}.
-{vmguest}s registered with {productname} can be managed like "`regular`" machines.
-In addition, basic {vmguest} management tasks such as (re)starting and stopping or changing processor and memory allocation can be carried out using {productname}.
+Other third-party virtualization providers are not directly supported by {productname}.
+However, if your provider allows you to export a JSON configuration file for the VM, you can upload that configuration file to {productname} and manage it with a VHM.
